--- a/libraries.html
+++ b/libraries.html
@@ -473,7 +473,7 @@
                         </div>
                         <h3 class="text-xl font-bold text-gray-900 dark:text-white">AuthnzNet</h3>
                     </div>
-                    <p class="text-gray-600 dark:text-gray-300 mb-4">Complete OAuth 2.0 and OpenID Connect authentication platform hosted by Noundry. Production-ready authentication-as-a-service with multi-tenant support, admin dashboard, and powerful CLI. Available at <a href="https://authnz.net" class="text-lime-600 dark:text-lime-400 underline font-semibold">authnz.net</a> with free and premium tiers.</p>
+                    <p class="text-gray-600 dark:text-gray-300 mb-4">Complete OAuth 2.0 and OpenID Connect platform with full OIDC compliance (RS256, PKCE, ID tokens). Three-tier workflow: local dev, managed cloud staging at auth.authnz.net, then production IdPs. Multi-tenant, CLI-driven. Available at <a href="https://authnz.net" class="text-lime-600 dark:text-lime-400 underline font-semibold">authnz.net</a> with free and premium tiers.</p>
 
                     <div class="mb-6">
                         <h4 class="font-semibold text-gray-900 dark:text-white mb-3">Key Features</h4>
@@ -494,13 +494,13 @@
                                 <svg class="w-4 h-4 text-lime-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                                 </svg>
-                                Hosted by Noundry
+                                Cloud service at auth.authnz.net
                             </li>
                             <li class="flex items-center">
                                 <svg class="w-4 h-4 text-lime-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                                 </svg>
-                                Free & premium tiers
+                                Full OIDC compliance (RS256, PKCE)
                             </li>
                         </ul>
                     </div>
@@ -509,7 +509,7 @@
                         <div class="text-gray-500 mb-2"># Sign up and use the API</div>
                         <div class="text-lime-600">POST https://api.authnz.net/oauth/token</div>
                         <div class="text-gray-500 mt-2"># Or use the CLI</div>
-                        <div class="text-lime-600">$ npm install -g @noundry/authnznet-cli</div>
+                        <div class="text-lime-600">$ dotnet tool install --global Noundry.AuthnzNet.CLI</div>
                     </div>
 
                     <div class="bg-lime-50 dark:bg-lime-900/20 rounded-lg p-4 mb-4">
@@ -608,7 +608,7 @@
                         </div>
                         <h3 class="text-xl font-bold text-gray-900 dark:text-white">authnz.net Platform</h3>
                     </div>
-                    <p class="text-gray-600 dark:text-gray-300 mb-4">Complete OAuth 2.0 and OpenID Connect authentication platform hosted by Noundry. Production-ready authentication-as-a-service with multi-tenant support, admin dashboard, and powerful CLI. Available at <a href="https://authnz.net" class="text-lime-600 dark:text-lime-400 underline font-semibold">authnz.net</a> with free and premium tiers.</p>
+                    <p class="text-gray-600 dark:text-gray-300 mb-4">Complete OAuth 2.0 and OpenID Connect platform with full OIDC compliance (RS256, PKCE, ID tokens). Three-tier workflow: local dev, managed cloud staging at auth.authnz.net, then production IdPs. Multi-tenant, CLI-driven. Available at <a href="https://authnz.net" class="text-lime-600 dark:text-lime-400 underline font-semibold">authnz.net</a> with free and premium tiers.</p>
 
                     <div class="mb-6">
                         <h4 class="font-semibold text-gray-900 dark:text-white mb-3">Key Features</h4>
@@ -629,13 +629,13 @@
                                 <svg class="w-4 h-4 text-lime-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                                 </svg>
-                                Hosted by Noundry
+                                Cloud service at auth.authnz.net
                             </li>
                             <li class="flex items-center">
                                 <svg class="w-4 h-4 text-lime-500 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                                 </svg>
-                                Free & premium tiers
+                                Full OIDC compliance (RS256, PKCE)
                             </li>
                         </ul>
                     </div>
@@ -644,7 +644,7 @@
                         <div class="text-gray-500 mb-2"># Sign up and use the API</div>
                         <div class="text-lime-600">POST https://api.authnz.net/oauth/token</div>
                         <div class="text-gray-500 mt-2"># Or use the CLI</div>
-                        <div class="text-lime-600">$ npm install -g @noundry/authnznet-cli</div>
+                        <div class="text-lime-600">$ dotnet tool install --global Noundry.AuthnzNet.CLI</div>
                     </div>
 
                     <div class="bg-lime-50 dark:bg-lime-900/20 rounded-lg p-4 mb-4">
