--- a/nd-cli.html
+++ b/nd-cli.html
@@ -138,7 +138,7 @@
                         <div class="bg-gray-900 dark:bg-gray-800 rounded-lg p-6 font-mono text-sm text-gray-300">
                             <div class="text-accent-500">$ nd install</div>
                         </div>
-                        <p class="mt-4 text-gray-600 dark:text-gray-300">Installs all Noundry CLI tools globally: ndng, slurp, authnz, lgby, njobs, ndotenvx, bowtie, cufflink</p>
+                        <p class="mt-4 text-gray-600 dark:text-gray-300">Installs all Noundry CLI tools globally: ndng, slurp, ndaz, lgby, njobs, ndotenvx, bowtie, cufflink</p>
                         <div class="mt-4 bg-yellow-50 dark:bg-yellow-900/20 border-l-4 border-yellow-500 p-4">
                             <p class="text-sm text-gray-700 dark:text-gray-300"><strong>Note:</strong> Some tools may not yet be published to NuGet. The command shows which tools installed successfully.</p>
                         </div>
@@ -219,7 +219,7 @@
                         <p class="text-sm text-gray-600 dark:text-gray-300 mt-1">Data ingestion</p>
                     </div>
                     <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
-                        <code class="text-primary-600 dark:text-primary-400 font-semibold">nd authnz</code>
+                        <code class="text-primary-600 dark:text-primary-400 font-semibold">nd ndaz</code>
                         <p class="text-sm text-gray-600 dark:text-gray-300 mt-1">Authentication/Authorization</p>
                     </div>
                     <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
