--- a/index.html
+++ b/index.html
@@ -1577,7 +1577,7 @@
                                 <span class="text-accent-500">dotnet tool install -g</span> <span class="text-gray-600 dark:text-gray-300">Noundry.Jobs</span>
                             </div>
                             <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">dotnet tool install -g</span> <span class="text-gray-600 dark:text-gray-300">Noundry.Deploy</span>
+                                <span class="text-accent-500">dotnet tool install -g</span> <span class="text-gray-600 dark:text-gray-300">Noundry.Engine</span>
                             </div>
                         </div>
                     </div>
